--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jersey+10&family=Jersey+15&family=Jersey+20&display=swap" rel="stylesheet">
+
 
     <style>
       .bd-placeholder-img {
@@ -115,6 +119,10 @@
       .margins-oceandarkblue {
         background-color: #02162b; /* Same blue as above, or a different shade */
       }
+      body {
+        font-family: 'Jersey 20', sans-serif;
+      }
+</style>
 
     </style>
 
@@ -134,7 +142,7 @@
                onload="this.style.opacity='1'; this.previousElementSibling.style.display='none';">
     
           <div class="card-body">
-            <p class="card-text"></p>
+            <p class="card-text" style="font-size: 20px;"></p>
           </div>
           <div style="position: absolute; top: 10px; left: 10px; 
                       background-color: rgba(0, 0, 0, 0.5); 
