--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <html lang="en" data-bs-theme="auto">
   <head><script src="assets/js/color-modes.js"></script>
 
+    <link rel="icon" href="Hadal(1).png" type="image/x-icon">
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
