--- a/about.html
+++ b/about.html
@@ -26,7 +26,6 @@
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 
-    <link href="sidebars.css" rel="stylesheet">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -123,8 +122,12 @@
       body {
         font-family: 'Jersey 20', sans-serif;
       }
-      html{
-        overflow: scroll;
+        html, body {
+        overflow: auto; /* or overflow-y: auto; */
+        height: auto;
+      }
+      .container {
+        overflow: visible;
       }
 </style>
 
@@ -149,13 +152,26 @@
 </nav>
 
 <main>
-  <div class="container px-4 py-5 mx-auto">
+  <section class="py-5 text-center container bg-oceandarkblue margins-oceandarkblue">
+    <div class="row py-lg-5 bg-oceandarkblue">
+      <div class="col-lg-6 col-md-8 mx-auto bg-oceandarkblue">
+        <h1 class="fw-light bg-oceandarkblue">About Hadal</h1>
+        <p class="lead text-body-secondary bg-oceandarkblue">Dive into the depths of Hadal.</p>
+        <p>
+          <a href="https://anzeru-games.itch.io/hadal-demo-build" class="btn btn-primary my-2">Itch.io Demo</a>
+          <a href="https://www.youtube.com/@anzeru" class="btn btn-secondary my-2" style="background-color: rgb(179, 17, 17); color: white; border-color: red;">YouTube</a>
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <div class="container px-4 py-5 mx-auto bg-oceanblue" style="margin-bottom: 3%;">
     <div class="row gx-5">
       <div class="col-md-6">
-        <h1 class="display-5 fw-bold lh-1 mb-3">About Hadal</h1>
-        <p class="lead">Hadal is a game that immerses players in the depths of the ocean, where they must navigate through treacherous waters and face off against terrifying sea creatures. With stylized graphics and and fast paced gameplay, Hadal offers a unique gaming experience that will keep players on the edge of their seats.</p>
+        <h1 class="display-5 fw-bold lh-1 mb-3">What is the Game About?</h1>
+        <p class="lead">Hadal is an in development game that immerses players in the depths of the ocean, where they must navigate through treacherous waters and face off against terrifying sea creatures. With stylized graphics and and fast paced gameplay, Hadal offers a unique gaming experience that will keep players on the edge of their seats.</p>
         <p class="lead">The game features a variety of gameplay mechanics, including exploration, and combat. Players will need to use their wits and skills to survive in this unforgiving environment.</p>
-        <img src="CompressedMedia/Hadal 3_26_2025 9_38_06 PM.png" alt="Hadal Game" class="img-fluid rounded-start" style="max-width: 100%; height: auto;">
+        <img src="CompressedMedia/Hadal 3_26_2025 9_38_06 PM.png" alt="Hadal Game" class="img-fluid" style="max-width: 100%; height: auto; border-radius: 10px;">
       </div>
       <div class="col-md-6">
         <img src="Hadal.png" alt="Hadal Game" class="img-fluid rounded-start" style="max-width: 100%; height: auto;">
@@ -170,7 +186,7 @@
   document.documentElement.setAttribute('data-bs-theme', 'dark');
 
 </script>
-<!-- Footer
+<!--
 <footer class="row py-lg-5" style="position: fixed; bottom: 0; width: 100%; z-index: 999; display: flex; justify-content: flex-start; align-items: center;">
     <div style="display: flex; justify-content: center; width: 100%;">
         <a href="https://anzeru-games.itch.io/hadal-demo-build" class="btn btn-primary my-2" style="margin-right: 5px;">Itch.io Demo</a>
