--- a/index.html
+++ b/index.html
@@ -124,6 +124,29 @@
       body {
         font-family: 'Jersey 20', sans-serif;
       }
+       .banner-section {
+        position: relative;
+      }
+
+      .banner-section::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: url('Media/Screenshot\ 2025-03-28\ 204102.png') no-repeat center center/cover;
+        filter: blur(5px);
+        z-index: -1;
+      }
+      .banner-content {
+        position: relative;
+        z-index: 1;
+        background: rgba(0, 0, 0, 0.6); /* Dark overlay behind text */
+        color: white; /* Ensures text is readable */
+        padding: 2rem;
+        border-radius: 10px;
+      }
 </style>
 
     </style>
@@ -172,11 +195,11 @@
 
 <main>
 
-  <section class="py-5 text-center container bg-oceandarkblue margins-oceandarkblue">
-    <div class="row py-lg-5 bg-oceandarkblue">
-      <div class="col-lg-6 col-md-8 mx-auto bg-oceandarkblue">
-        <h1 class="fw-light bg-oceandarkblue">Hadal Work in Progress</h1>
-        <p class="lead text-body-secondary bg-oceandarkblue">Explore a collection of dated images and insights detailing the development process and progress of my upcoming underwater shooter game, Hadal.</p>
+  <section class="py-5 text-center container-fluid banner-section">
+    <div class="row py-lg-5">
+      <div class="col-lg-6 col-md-8 mx-auto banner-content">
+        <h1 class="fw-light">Hadal Work in Progress</h1>
+        <p class="lead text-body-secondary">Explore a collection of dated images and insights detailing the development process and progress of my upcoming underwater shooter game, Hadal.</p>
         <p>
           <a href="https://anzeru-games.itch.io/hadal-demo-build" class="btn btn-primary my-2">Itch.io Demo</a>
           <a href="https://www.youtube.com/@anzeru" class="btn btn-secondary my-2" style="background-color: rgb(179, 17, 17); color: white; border-color: red;">YouTube</a>
