--- a/index.html
+++ b/index.html
@@ -138,6 +138,11 @@
         background: url('Media/Screenshot\ 2025-03-28\ 204102.png') no-repeat center center/cover;
         filter: blur(5px);
         z-index: -1;
+        opacity: 0; /* Start with opacity 0 */
+        transition: opacity 1s ease-in-out;
+      }
+      .banner-section.loaded::before {
+        opacity: 1; /* Fade in once loaded */
       }
       .banner-content {
         position: relative;
@@ -238,7 +243,9 @@
     // Append the cloned template to the card container
     document.getElementById('albumContainer').appendChild(clone);
   }
-
+    window.onload = function() {
+    document.querySelector('.banner-section').classList.add('loaded');
+  };
   // Example usage: Dynamically create a card
   createCard('CompressedMedia/Hadal 3_26_2025 9_38_06 PM.png', 'Additional tweaks to stylization, increased thickness of edge, decreased intensity of normal maps.', 'March 2025');
   createCard('CompressedMedia/Hadal 3_23_2025 10_12_54 PM.png', 'Added some cool pillars, and a grounding force (keeps player stuck to slopes when moving on them).', 'March 2025');
