--- a/about.html
+++ b/about.html
@@ -3,6 +3,11 @@
 <html lang="en" data-bs-theme="auto">
   <head>
 
+    <meta property="og:title" content="Hadal - Underwater FPS">
+    <meta property="og:description" content="Explore the deep, battle bosses, and acquire powerful weapons in this unique underwater shooter.">
+    <meta property="og:image" content="Hadal(1).png">
+    <meta property="og:type" content="website">
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
