--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta property="og:title" content="Hadal - Underwater FPS">
     <meta property="og:description" content="Explore the deep, battle bosses, and acquire powerful weapons in this unique underwater shooter.">
-    <meta property="og:image" content="Hadal(1).png">
+    <meta property="og:image" content="https://anzeru-games.github.io/Hadal/Hadal(1).png">
     <meta property="og:type" content="website">
 
     <link rel="icon" href="Hadal(1).png" type="image/x-icon">
