--- a/about.html
+++ b/about.html
@@ -5,7 +5,9 @@
 
     <meta property="og:title" content="Hadal - Underwater FPS">
     <meta property="og:description" content="Explore the deep, battle bosses, and acquire powerful weapons in this unique underwater shooter.">
-    <meta property="og:image" content="https://anzeru-games.github.io/Hadal/Hadal(1).png">
+    <meta property="og:image" content="https://raw.githubusercontent.com/anzeru-games/Hadal/Hadal(1).png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
     <meta property="og:type" content="website">
 
     <meta charset="utf-8">
