--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <html lang="en" data-bs-theme="auto">
   <head>
 
+    <meta property="og:url" content="https://anzeru-games.github.io/Hadal/"/>
     <meta property="og:title" content="Hadal - Underwater FPS">
     <meta property="og:description" content="Explore the deep, battle bosses, and acquire powerful weapons in this unique underwater shooter.">
     <meta property="og:image" content="./Hadal(1).png"/>
