--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta property="og:url" content="https://anzeru-games.github.io/Hadal/"/>
     <meta property="og:title" content="Hadal - Underwater FPS">
     <meta property="og:description" content="Explore the deep, battle bosses, and acquire powerful weapons in this unique underwater shooter.">
-    <meta property="og:image" content="./Hadal(1).png"/>
+    <meta property="og:image" content="./Hadal1.png"/>
     <meta property="og:type" content="website">
 
     <meta charset="utf-8">
@@ -180,7 +180,7 @@
         <img src="CompressedMedia/Hadal 3_26_2025 9_38_06 PM.png" alt="Hadal Game" class="img-fluid" style="max-width: 100%; height: auto; border-radius: 10px;">
       </div>
       <div class="col-md-6">
-        <img src="Hadal(1).png" alt="Hadal Game" class="img-fluid rounded-start" style="max-width: 100%; height: auto;">
+        <img src="Hadal1.png" alt="Hadal Game" class="img-fluid rounded-start" style="max-width: 100%; height: auto;">
       </div>
     </div>
   </div>
