--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta property="og:url" content="https://anzeru-games.github.io/Hadal/"/>
     <meta property="og:title" content="Hadal - Underwater FPS">
     <meta property="og:description" content="Explore the deep, battle bosses, and acquire powerful weapons in this unique underwater shooter.">
-    <meta property="og:image" content="./Hadal(1).png"/>
+    <meta property="og:image" content="./Hadal1.png"/>
     <meta property="og:type" content="website">
 
-    <link rel="icon" href="Hadal(1).png" type="image/x-icon">
+    <link rel="icon" href="Hadal1.png" type="image/x-icon">
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
