--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta property="og:url" content="https://anzeru-games.github.io/Hadal/"/>
     <meta property="og:title" content="Hadal - Underwater FPS">
     <meta property="og:description" content="Explore the deep, battle bosses, and acquire powerful weapons in this unique underwater shooter.">
-    <meta property="og:image" content="./Hadal1.png"/>
+    <meta property="og:image" content="https://github.com/Anzeru-Games/Hadal/blob/main/Hadal1.png"/>
     <meta property="og:type" content="website">
 
     <meta charset="utf-8">
