--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta property="og:url" content="https://anzeru-games.github.io/Hadal/"/>
     <meta property="og:title" content="Hadal - Underwater FPS">
     <meta property="og:description" content="Explore the deep, battle bosses, and acquire powerful weapons in this unique underwater shooter.">
-    <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/3/3f/JPEG_example_flower.jpg"/>
+    <meta property="og:image" content="https://i.postimg.cc/90chSFcC/Hadal1.png"/>
     <meta property="og:type" content="website">
 
     <link rel="icon" href="Hadal1.png" type="image/x-icon">
