--- a/about.html
+++ b/about.html
@@ -211,7 +211,7 @@
     <div class="row gx-5">
       <div class="col-md-6">
         <h1 class="display-5 fw-bold lh-1 mb-3">What is the Game About?</h1>
-        <p class="lead">Hadal is an in development boomer shooter that puts players in the depths of the ocean, where they must navigate through treacherous waters and face off against terrifying sea creatures. Features stylized graphics and and fast paced gameplay.</p>
+        <p class="lead">Hadal is an in development boomer shooter that puts players in the depths of the ocean, where they must navigate through treacherous waters and face off against terrifying sea creatures. Features stylized graphics and fast paced gameplay.</p>
         <p class="lead">The game features a variety of gameplay mechanics, including exploration, mobility, and shooter combat. Players will need to use their wits and skills to survive in this unforgiving environment.</p>
         <img src="CompressedMedia/Hadal 3_26_2025 9_38_06 PM.png" alt="Hadal Game" class="img-fluid" style="max-width: 100%; height: auto; border-radius: 10px;">
       </div>
