--- a/index.html
+++ b/index.html
@@ -161,9 +161,25 @@
         margin-right: 3%;
         border-radius: 10px;
       }
-</style>
+      .imageModal {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.8);
+        justify-content: center;
+        align-items: center;
+      }
 
-    </style>
+    .modalImage {
+      max-width: 90%;
+      max-height: 90%;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+    }
+</style>
 
     
   </head>
@@ -209,6 +225,9 @@
 
 <main>
   <img id="banner-image" src="Media/Screenshot 2025-03-28 204102.png" style="display: none;" onload="document.querySelector('.banner-section').classList.add('loaded');">
+  <div id="imageModal">
+    <img id="modalImage">
+  </div>
   <section class="py-5 text-center container-fluid banner-section">
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto banner-content">
