--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         margin-right: 3%;
         border-radius: 10px;
       }
-      .imageModal {
+      #imageModal {
         display: none;
         position: fixed;
         top: 0;
@@ -173,7 +173,7 @@
         align-items: center;
       }
 
-    .modalImage {
+    #modalImage {
       max-width: 90%;
       max-height: 90%;
       border-radius: 10px;
