--- a/index.html
+++ b/index.html
@@ -180,6 +180,9 @@
       border-radius: 10px;
       box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
     }
+    body.modal-open {
+      overflow: hidden;
+    }
 </style>
 
     
@@ -287,6 +290,17 @@
   document.getElementById("imageModal").addEventListener("click", function () {
     this.style.display = "none";
   });
+  
+  function openModal(imageSrc) {
+    document.getElementById("modalImage").src = imageSrc;
+    document.getElementById("imageModal").style.display = "block";
+    document.body.classList.add("modal-open"); // Prevent scrolling
+}
+
+function closeModal() {
+    document.getElementById("imageModal").style.display = "none";
+    document.body.classList.remove("modal-open"); // Restore scrolling
+}
   // Example usage: Dynamically create a card
   createCard('CompressedMedia/Hadal 3_26_2025 9_38_06 PM.png', 'Additional tweaks to stylization, increased thickness of edge, decreased intensity of normal maps.', 'March 2025');
   createCard('CompressedMedia/Hadal 3_23_2025 10_12_54 PM.png', 'Added some cool pillars, and a grounding force (keeps player stuck to slopes when moving on them).', 'March 2025');
