--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
       #imageModal {
         display: flex;
         position: fixed;
-        top: 0;
-        left: 0;
+        top: 50%;
+        left: 50%;
         width: 100%;
         height: 100%;
         background: rgba(0, 0, 0, 0.8);
@@ -282,7 +282,7 @@
   function openModal(imageSrc) {
     const modal = document.getElementById("imageModal");
     const modalImg = document.getElementById("modalImage");
-
+    document.body.classList.add("modal-open");
     modalImg.src = imageSrc;
     modal.style.display = "block";
   }
