--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
       #imageModal {
         display: flex;
         position: fixed;
-        top: 50%;
-        left: 50%;
+        top: 0;
+        left: 0;
         width: 100%;
         height: 100%;
         background: rgba(0, 0, 0, 0.8);
