--- a/index.html
+++ b/index.html
@@ -181,6 +181,9 @@
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
   object-fit: contain; /* Ensure the image scales properly within the modal */
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
     body.modal-open {
       overflow: hidden;
