--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
   object-fit: contain; /* Ensure the image scales properly within the modal */
   top: 50%;
   left: 50%;
-  transform: translate(+50%, +50%);
+  transform: translate(0%, +50%);
 }
     body.modal-open {
       overflow: hidden;
