--- a/index.html
+++ b/index.html
@@ -180,10 +180,11 @@
   max-height: 95%;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
-  object-fit: contain; /* Ensure the image scales properly within the modal */
+  object-fit: contain;
+  position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(0%, +50%);
+  transform: translate(-50%, -50%);
 }
     body.modal-open {
       overflow: hidden;
