--- a/index.html
+++ b/index.html
@@ -50,12 +50,14 @@
           <img class="full-image bd-placeholder-img card-img-top" 
                style="width: 100%; height: 225px; object-fit: cover; opacity: 0; transition: opacity 0.5s ease; background-color: black; position: absolute; top: 0; left: 0;" 
                role="img" 
+               loading="lazy"
                aria-label="Full Image">
           
           <!-- Thumbnail (Always visible below) -->
           <img class="thumb-image bd-placeholder-img card-img-top" 
                style="width: 100%; height: 225px; object-fit: cover; background-color: black;" 
                role="img" 
+               loading="lazy"
                aria-label="Thumbnail">
     
           <div class="card-body">
