--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <img class="thumb-image bd-placeholder-img card-img-top" 
                style="width: 100%; height: 225px; object-fit: cover; background-color: black;" 
                role="img" 
-               loading="lazy"
+               loading="eager"
                aria-label="Thumbnail">
     
           <div class="card-body">
